<resources>
    <string name="app_name">Currency Converter</string>
    <string name="title">Currency Converter</string>
    <string name="hint_enter_amount">Enter amount</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="system_default">System Default</string>
    <string name="swap_currencies">Swap currencies</string>
    <string name="open_settings">Open settings</string>

    <!-- Currency Names -->
    <string name="currency_inr">Indian Rupee</string>
    <string name="currency_usd">US Dollar</string>
    <string name="currency_jpy">Japanese Yen</string>
    <string name="currency_eur">Euro</string>

    <!-- Currency Symbols -->
    <string name="symbol_inr">₹</string>
    <string name="symbol_usd">$</string>
    <string name="symbol_jpy">¥</string>
    <string name="symbol_eur">€</string>
</resources>